--- a/my_helms/environments/prod-env/values.yaml
+++ b/my_helms/environments/prod-env/values.yaml
@@ -10,11 +10,11 @@ global:
   otelMetricsExporter: none
   kafkaBootstrapServers: gke-confluent-kafka-cp-kafka-headless:9092
   kafkaSchemaRegistryURL: http://gke-confluent-kafka-cp-schema-registry:8081
-  springDatasourceHost: aws-postgresql.ctso2e4midpm.ap-southeast-2.rds.amazonaws.com
+  springDatasourceHost: 35.226.5.241
   springDatasourcePort: 5432
   springDatasourceUsername: postgres
-  springDatasourcePassword: postgresadmin
-  springDatasourceInitializationMode: never
+  springDatasourcePassword: localdb
+  springDatasourceInitializationMode: always
   springDataRedisHost: redis-13960.c9.us-east-1-2.ec2.redns.redis-cloud.com
   springDataRedisPort: 13960
   springDataRedisPassword: N7qkA39hffMIU9B99uFjAptksNmt1ALG
