--- a/my_helms/backend-programming-learning-system-services/gateway-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/gateway-service/values.yaml
@@ -29,7 +29,7 @@ resouceserver_enabled: false
 otel_enabled: true
 kafka_enabled: false
 database_enabled: false
-resources_enabled: false
+resources_enabled: true
 redis_enabled: true
 
 autoscaling:
