[FE] - feat: build api mark view for chapter resource

--- a/my_helms/backend-programming-learning-system-services/core-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/core-service/values.yaml
@@ -30,7 +30,7 @@ otel_enabled: true
 kafka_enabled: true
 database_enabled: true
 resources_enabled: false
-redis_enabled: false
+redis_enabled: true
 
 springDatasourceDatabase: core-service
 
