--- a/my_helms/environments/prod-env/values.yaml
+++ b/my_helms/environments/prod-env/values.yaml
@@ -16,5 +16,6 @@ global:
   springDatasourceInitializationMode: never
   springDataRedisHost: "redis-master"
   springDataRedisPort: 6379
+  springDataRedisPassword: "admin"
   loggingLevelRoot: INFO
   loggingLevelComBackendProgrammingLearningSystem: INFO
