--- a/my_helms/backend-programming-learning-system-common/templates/configmap.yaml
+++ b/my_helms/backend-programming-learning-system-common/templates/configmap.yaml
@@ -20,6 +20,7 @@ data:
   SPRING_DATASOURCE_INITIALIZATION-MODE: "{{ .Values.global.springDatasourceInitializationMode }}"
   SPRING_DATA_REDIS_HOST: "{{ .Values.global.springDataRedisHost }}"
   SPRING_DATA_REDIS_PORT: "{{ .Values.global.springDataRedisPort }}"
+  SPRING_DATA_REDIS_PASSWORD: "{{ .Values.global.springDataRedisPassword }}"
   LOGGING_LEVEL_ROOT: "{{ .Values.global.loggingLevelRoot }}"
   LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM: "{{ .Values.global.loggingLevelComBackendProgrammingLearningSystem }}"
 {{- end -}}
