--- a/my_helms/backend-programming-learning-system-common/templates/deployment.yaml
+++ b/my_helms/backend-programming-learning-system-common/templates/deployment.yaml
@@ -135,6 +135,11 @@ spec:
             configMapKeyRef:
               name: {{ .Values.global.configMapName }}
               key: SPRING_DATA_REDIS_PORT
+        - name: SPRING_DATA_REDIS_PASSWORD
+          valueFrom:
+              configMapKeyRef:
+                name: {{ .Values.global.configMapName }}
+                key: SPRING_DATA_REDIS_PASSWORD
         {{- end }}
         {{- if .Values.resources_enabled }}
         resources:
