--- a/my_helms/redis-cluster/values.yaml
+++ b/my_helms/redis-cluster/values.yaml
@@ -840,7 +840,7 @@ cluster:
   ##
   ## @param cluster.nodes The number of master nodes should always be >= 3, otherwise cluster creation will fail
   ##
-  nodes: 6
+  nodes: 4
   ## @param cluster.replicas Number of replicas for every master in the cluster
   ## Parameter to be passed as --cluster-replicas to the redis-cli --cluster create
   ## 1 means that we want a replica for every master created
@@ -851,7 +851,7 @@ cluster:
   externalAccess:
     ## @param cluster.externalAccess.enabled Enable access to the Redis
     ##
-    enabled: true
+    enabled: false
     ## @param cluster.externalAccess.hostMode Set cluster preferred endpoint type as hostname
     ## ref: https://github.com/redis/redis/pull/9530
     ##
