[BE] - feat: fix bug

--- a/my_helms/environments/prod-env/values.yaml
+++ b/my_helms/environments/prod-env/values.yaml
@@ -15,8 +15,8 @@ global:
   springDatasourceUsername: postgres
   springDatasourcePassword: localdb
   springDatasourceInitializationMode: never
-#  springDataRedisHost: "redis-master"
-  springDataRedisHost: "redis-cluster"
+  springDataRedisHost: "redis-master"
+#  springDataRedisHost: "redis-cluster"
   springDataRedisPort: 6379
   springDataRedisPassword: "admin"
   loggingLevelRoot: INFO
