--- a/my_helms/redis/values.yaml
+++ b/my_helms/redis/values.yaml
@@ -178,9 +178,9 @@ master:
   ## Commands will be completely disabled by renaming each to an empty string.
   ## ref: https://redis.io/topics/security#disabling-of-specific-commands
   ##
-  disableCommands:
-    - FLUSHDB
-    - FLUSHALL
+  disableCommands: []
+#    - FLUSHDB
+#    - FLUSHALL
   ## @param master.command Override default container command (useful when using custom images)
   ##
   command: []
@@ -638,9 +638,9 @@ replica:
   ## Commands will be completely disabled by renaming each to an empty string.
   ## ref: https://redis.io/topics/security#disabling-of-specific-commands
   ##
-  disableCommands:
-    - FLUSHDB
-    - FLUSHALL
+  disableCommands: []
+#    - FLUSHDB
+#    - FLUSHALL
   ## @param replica.command Override default container command (useful when using custom images)
   ##
   command: []
