--- a/my_helms/environments/dev-env/values.yaml
+++ b/my_helms/environments/dev-env/values.yaml
@@ -9,13 +9,12 @@ global:
   otelMetricsExporter: none
   kafkaBootstrapServers: local-confluent-kafka-cp-kafka-headless:9092
   kafkaSchemaRegistryURL: http://local-confluent-kafka-cp-schema-registry:8081
-  springDatasourceHost: 35.226.5.241
+  springDatasourceHost: postgres-service
   springDatasourcePort: 5432
   springDatasourceUsername: postgres
   springDatasourcePassword: localdb
-  springDatasourceInitializationMode: never
-  springDataRedisHost: redis-13960.c9.us-east-1-2.ec2.redns.redis-cloud.com
-  springDataRedisPort: 13960
-  springDataRedisPassword: N7qkA39hffMIU9B99uFjAptksNmt1ALG
+  springDatasourceInitializationMode: always
+  springDataRedisHost: "redis-master"
+  springDataRedisPort: 6379
   loggingLevelRoot: INFO
   loggingLevelComBackendProgrammingLearningSystem: INFO
