[BE] - feat: fix something

--- a/my_helms/keycloak/postgres_keycloak.yml
+++ b/my_helms/keycloak/postgres_keycloak.yml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-deployment
+  name: postgres-keycloak-deployment
   namespace: default
   labels:
-    app: postgres-deployment
+    app: postgres-keycloak-deployment
 spec:
   selector:
     matchLabels:
-      app: postgres-deployment
+      app: postgres-keycloak-deployment
   template:
     metadata:
       labels:
-        app: postgres-deployment
+        app: postgres-keycloak-deployment
     spec:
       containers:
-        - name: postgres-deployment
+        - name: postgres-keycloak-deployment
           image: postgres:latest
           env:
             - name: POSTGRES_PASSWORD
@@ -31,10 +31,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-service
+  name: postgres-keycloak-service
 spec:
   selector:
-    app: postgres-deployment
+    app: postgres-keycloak-deployment
   ports:
     - name: postgres-service-port
       protocol: TCP
