--- a/my_helms/environments/dev-env/values.yaml
+++ b/my_helms/environments/dev-env/values.yaml
@@ -3,15 +3,15 @@ global:
   activeProfile: default
   configServerURL: "http://config-server:9999"
   discoveryServerURL: "http://discovery-service:8761/eureka"
-#  keyCloakURL: http://keycloak.default.svc.cluster.local:80/realms/master/protocol/openid-connect/certs
-  keyCloakURL: keycloak
+  keyCloakURL: "keycloak:8080"
+  keyCloakURLs: "http://keycloak:8080"
   openTelemetryJavaAgent: "-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar"
   otelExporterEndPoint: http://tempo-grafana-tempo-distributor:4317
   otelMetricsExporter: none
   kafkaBootstrapServers: gke-confluent-kafka-cp-kafka-headless:9092
   kafkaSchemaRegistryURL: http://gke-confluent-kafka-cp-schema-registry:8081
-  springDatasourceHost: database-postgres-service
-  springDatasourcePort: 5432
+  springDatasourceHost: postgres-service
+  springDatasourcePort: 5439
   springDatasourceUsername: postgres
   springDatasourcePassword: localdb
   springDatasourceInitializationMode: always
