--- a/my_helms/keycloak/dev/keycloak-local.yml
+++ b/my_helms/keycloak/dev/keycloak-local.yml
@@ -26,7 +26,7 @@ spec:
           - name: KC_DB
             value: postgres
           - name: KC_DB_URL_HOST
-            value: postgres-service
+            value: postgres-keycloak-service
           - name: KC_DB_URL_DATABASE
             value: keycloak
           - name: KC_DB_SCHEMA
@@ -50,5 +50,5 @@ spec:
   type: LoadBalancer
   ports:
     - name: http
-      port: 80
+      port: 8080
       targetPort: 8080
