--- a/my_helms/postgres_database/postgres-database-deployment.yml
+++ b/my_helms/postgres_database/postgres-database-deployment.yml
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: database-postgres-service
+  name: postgres-service
   namespace: default
   labels:
     app: postgres-deployment
