--- a/my_helms/backend-programming-learning-system-services/config-server/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/config-server/values.yaml
@@ -26,7 +26,7 @@ config_enabled: false
 discovery_enabled: false
 eureka_instance_hostname_enabled: false
 resouceserver_enabled: false
-otel_enabled: true
+otel_enabled: false
 kafka_enabled: false
 database_enabled: false
 resources_enabled: true
