--- a/my_helms/backend-programming-learning-system-services/course-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/course-service/values.yaml
@@ -26,7 +26,7 @@ config_enabled: true
 discovery_enabled: true
 eureka_instance_hostname_enabled: false
 resouceserver_enabled: true
-otel_enabled: true
+otel_enabled: false
 kafka_enabled: true
 database_enabled: true
 resources_enabled: false
@@ -44,7 +44,7 @@ autoscaling:
 socket:
   enabled: true
   type: LoadBalancer
-  port: 80
+  port: 8085
   targetPort: 8085
 
 resources:
