--- a/my_helms/backend-programming-learning-system-services/discovery-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/discovery-service/values.yaml
@@ -27,7 +27,7 @@ config_enabled: false
 discovery_enabled: false
 eureka_instance_hostname_enabled: true
 resouceserver_enabled: false
-otel_enabled: true
+otel_enabled: false
 kafka_enabled: false
 database_enabled: false
 resources_enabled: false
