--- a/my_helms/backend-programming-learning-system-services/gateway-service/values.yaml
+++ b/my_helms/backend-programming-learning-system-services/gateway-service/values.yaml
@@ -26,7 +26,7 @@ config_enabled: true
 discovery_enabled: true
 eureka_instance_hostname_enabled: false
 resouceserver_enabled: false
-otel_enabled: true
+otel_enabled: false
 kafka_enabled: false
 database_enabled: false
 resources_enabled: false
